--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ SECRET_KEY=your_jwt_secret_key
 
 # Analysis Settings (in mins)
 ANALYSIS_INTERVAL=60
+
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
+TELEGRAM_NOTIFICATIONS_ENABLED=true
