--- a/config/user_config.json
+++ b/config/user_config.json
@@ -2,15 +2,17 @@
     "analysis": {
       "interval": 1,
       "main_timeframe": "1hour",
-      "timeframes": ["1hour"],
+      "timeframes": ["1hour","1day"],
       "indicators": [
-        "RSI", "MACD", "BBANDS"
+        "RSI", "MACD", "BBANDS", "FIBONACCI"
       ]
     },
     "telegram": {
+      "telegram_notifications_enabled": true,
       "telegram_notify_on_sentiment": ["strong buy", "moderate buy"],
-      "telegram_notify_on_confidence": 0.75,
-      "telegram_notifications_enabled": true
+      "telegram_notify_on_confidence": 0.5,
+      "telegram_notify_on_volume": 50000,
+      "telegram_notify_on_plr": 0
     },
     "display": {
       "theme": "dark",
