update: updated readme

--- a/config/user_config.json
+++ b/config/user_config.json
@@ -10,9 +10,10 @@
     "telegram": {
       "telegram_notifications_enabled": true,
       "telegram_notify_on_sentiment": ["strong buy", "moderate buy"],
-      "telegram_notify_on_confidence": 0.75,
-      "telegram_notify_on_volume": 50000,
-      "telegram_notify_on_plr": 0
+      "telegram_notify_on_confidence": 0.5,
+      "telegram_notify_on_volume": 0,
+      "telegram_notify_on_plr": 0,
+      "telegram_notify_on_rsi_buy": 30
     },
     "display": {
       "theme": "dark",
