--- a/config/user_config.json
+++ b/config/user_config.json
@@ -2,7 +2,7 @@
   "analysis": {
     "interval": 1,
     "main_timeframe": "15min",
-    "timeframes": ["15min", "1hour"],
+    "timeframes": ["15min"],
     "indicators": [
       "RSI", "MACD", "BBANDS", "SMA", "EMA", 
       "OBV", "STOCH", "ADX", "FIBONACCI"
@@ -10,8 +10,9 @@
   },
   "telegram": {
     "telegram_notifications_enabled": true,
-    "telegram_notify_on_sentiment": ["weak buy"],
+    "telegram_notify_on_sentiment": ["moderate buy", "strong buy"],
     "telegram_notify_on_confidence": 0.75,
+    "telegram_notify_on_score": "0.4_0.6",
     "telegram_notify_on_volume": 10000,
     "telegram_notify_on_plr": 0,
     "telegram_notify_on_rsi_buy": 70,
