--- a/config/user_config.json
+++ b/config/user_config.json
@@ -1,18 +1,18 @@
 {
   "analysis": {
     "interval": 1,
-    "main_timeframe": "1day",
-    "timeframes": ["1day"],
+    "main_timeframe": "15min",
+    "timeframes": ["15min"],
     "indicators": [
       "RSI", "MACD", "BBANDS", "SMA", "EMA", 
-      "STOCH", "ADX"
+      "STOCH", "ADX", "FIBONACCI"
     ]
   },
   "telegram": {
     "telegram_notifications_enabled": true,
-    "telegram_notify_on_sentiment": ["weak buy"],
+    "telegram_notify_on_sentiment": ["moderate buy"],
     "telegram_notify_on_confidence": 0.7,
-    "telegram_notify_on_score": "0.1_0.3",
+    "telegram_notify_on_score": "0.4_0.6",
     "telegram_notify_on_volume": 0,
     "telegram_notify_on_plr": 0,
     "telegram_notify_on_rsi_buy": 70,
