feat: Improve Telegram notifications with strategy-specific thresholds and better sentiment analysis

--- a/config/default_config.json
+++ b/config/default_config.json
@@ -5,7 +5,7 @@
     "timeframes": ["15min"],
     "indicators": [
       "RSI", "MACD", "BBANDS", "SMA", "EMA", 
-      "STOCH", "ADX", "FIBONACCI", "OBV"
+      "STOCH", "ADX", "FIBONACCI", "OBV", "CANDLESTICK"
     ]
   },
   "display": {
@@ -17,19 +17,5 @@
     "enabled": false,
     "email": "",
     "strong_signals_only": true
-  },
-  "strategy": {
-    "momentum": {
-      "score_threshold": 0.5,
-      "confidence_threshold": 0.6
-    },
-    "mean_reversion": {
-      "score_threshold": 0.5,
-      "confidence_threshold": 0.6
-    },
-    "breakout": {
-      "score_threshold": 0.5,
-      "confidence_threshold": 0.6
-    }
   }
 }
